--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,6 @@
   margin: 0 !important;
   padding: 0 !important;
   text-align: center;
+  width: 100vw !important;
+  height: 100vh !important;
 }
