--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
   -moz-osx-font-smoothing: grayscale;
   padding: 0 !important;
   margin: 0 !important;
+  
+  width: 100vw !important;
+  height: 100vh !important;
 }
 
 
